fix button width on smaller screens

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -881,11 +881,12 @@ button > a {
   
   .hero-cta {
     flex-direction: column;
+    align-items: center;
     width: 100%;
   }
   
   .cta-primary, .cta-secondary {
-    width: 100%;
+    width: 200px;
   }
   
   #headshot {
